kibana/kibana-prd.yaml
kind: Service
apiVersion: v1
metadata:
  name: kibana-prd
  namespace: monitoring
  labels:
    app: kibana-prd
spec:
  type: NodePort
  ports:
  - port: 5601
    nodePort: 32005
  selector:
    app: kibana-prd
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-prd
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana-prd
    spec:
      containers:
      - name: kiabana
        image: k8s-registry.zeusis.com:32000/kibana:5.0
        resources:
          limits:
            cpu: 1000m
            memory: 2000Mi
